--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mocha": ">=1.8.2",
     "chai": ">=1.5.0",
     "sinon": ">=1.6.0",
-    "sinon-chai": ">=2.3.1"
+    "sinon-chai": ">=2.3.1",
+    "istanbul": ">=0.1.34"
   },
   "engines": {
     "node": ">=0.9.6",
